add all my code

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-PORT=5000
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/mydatabase?retryWrites=true&w=majority
+MONGO_USERNAME=api
+MONGO_PASSWORD=api123
+MONGO_CLUSTER=testcluster1.lhhvh.mongodb.net
+MONGO_DB=mydb
+MONGO_URI=mongodb+srv://api:api123@testcluster1.lhhvh.mongodb.net/mydb?retryWrites=true&w=majority
+PORT=3000
